--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.762</string>
-    <string name="version">Версия: 1.762</string>
+    <string name="version_code">1.763</string>
+    <string name="version">Версия: 1.763</string>
 
     <string name="app_name">Такси Доставка</string>
 
@@ -389,4 +389,5 @@
     <string name="order_to_cancel_true">У Вас есть запланированные поездки</string>
     <string name="no_house_vis_mes">Запрошенный адрес не найден. Попробуйте дргуой или нажмите зеленую кнопку со стрелкой "назад"</string>
     <string name="no_adrees_mes">Уточните адрес или наберите операторов</string>
+    <string name="pos_f">DW631 47, 00-514 Warszawa, Poland\t</string>
 </resources>
