--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.768</string>
-    <string name="version">Version: 1.768</string>
+    <string name="version_code">1.769</string>
+    <string name="version">Version: 1.769</string>
 
     <string name="app_name">Taxi Dostavka</string>
 
@@ -386,4 +386,13 @@
     <string name="no_house_vis_mes">The requested address was not found. Try something else or click the green back arrow button</string>
     <string name="no_adrees_mes">Check the address or dial operators</string>
     <string name="pos_f">DW631 47, 00-514 Warszawa, Poland\t</string>
+    <string name="check_city">Select a taxi service in your city</string>
+    <string name="upd_account">Save changes</string>
+    <string name="del_account">Delete account</string>
+    <string name="account_menu">Account</string>
+    <string name="email_upd">Changes not available</string>
+    <string name="info_upd">Information updated</string>
+    <string name="del_info">Account data deleted from server</string>
+    <string name="user_name">Username</string>
+    <string name="phone_number">Phone</string>
 </resources>
