--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.770</string>
-    <string name="version">Version: 1.770</string>
+    <string name="version_code">1.771</string>
+    <string name="version">Version: 1.771</string>
 
     <string name="app_name">Taxi Dostavka</string>
 
@@ -45,7 +45,7 @@
     <string name="gps_on_button">turn on gps</string>
     <string name="wellcome">Create a route or choose a favorite.</string>
     <string name="verify_phone">Verify phone</string>
-    <string name="format_phone">Phone number input format: +380936665544</string>
+    <string name="format_phone">Phone number input format: +38 093 666 55 44</string>
     <string name="sent_button">Send</string>
     <string name="verify_internet">Check your Internet connection, call the operator or restart the application.</string>
     <string name="save_button">Save</string>
@@ -395,4 +395,5 @@
     <string name="del_info">Account data deleted from server</string>
     <string name="user_name">Username</string>
     <string name="phone_number">Phone</string>
+    <string name="uninstal">Uninstall application</string>
 </resources>
