--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.771</string>
-    <string name="version">Версія: 1.771</string>
+    <string name="version_code">1.772</string>
+    <string name="version">Версія: 1.772</string>
 
     <string name="app_name">Таксі Доставка</string>
 
@@ -389,7 +389,7 @@
     <string name="no_house_vis_mes">Запитану адресу не знайдено. Спробуйте інший або натисніть зелену кнопку зі стрілкою "назад"</string>
     <string name="no_adrees_mes">Уточніть адресу або наберіть операторів</string>
     <string name="pos_f">DW631 47, 00-514 Warszawa, Poland\t</string>
-    <string name="check_city">Select a taxi service in your city</string>
+    <string name="check_city">Виберіть службу таксі у вашому місті</string>
     <string name="upd_account">Зберегти зміни</string>
     <string name="del_account">Видалити обліковий запис</string>
     <string name="account_menu">Акаунт</string>
@@ -399,4 +399,5 @@
     <string name="user_name">Ім\'я користувача</string>
     <string name="phone_number">Телефон</string>
     <string name="uninstal">Видалити додаток</string>
+    <string name="your_order">Ваше замовлення</string>
 </resources>
