--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.774</string>
-    <string name="version">Version: 1.774</string>
+    <string name="version_code">1.775</string>
+    <string name="version">Version: 1.775</string>
 
     <string name="app_name">Taxi Dostavka</string>
 
@@ -405,4 +405,5 @@
     <string name="data_order">Select date</string>
     <string name="on_now">On now</string>
     <string name="on">On</string>
+    <string name="time_order">" Car delivery on "</string>
 </resources>
