--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.774</string>
-    <string name="version">Версия: 1.774</string>
+    <string name="version_code">1.775</string>
+    <string name="version">Версия: 1.775</string>
 
     <string name="app_name">Такси Доставка</string>
 
@@ -12,7 +12,6 @@
     <string name="nav_header_subtitle">Быстрые поездки по городам Украины</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Настройки</string>
-
 
     <string name="menu_maps">Карта</string>
     <string name="menu_home">По адресу (старое)</string>
@@ -410,4 +409,5 @@
     <string name="data_order">Выберите дату</string>
     <string name="on_now">На сейчас</string>
     <string name="on">На</string>
+    <string name="time_order">" Подача автомобиля на "</string>
 </resources>
